--- a/Introduction.tex
+++ b/Introduction.tex
@@ -37,12 +37,12 @@ The results in this thesis have been published in the following articles:
 The formalisation of the DPLL proof system and its completeness are described along with the use of non-computational quantifiers to optimise the extracted program. The extracted program is run as a term inside the Minlog system on pigeon hole formulae.
 
 
-\textbf{\ul{2. Extracting Verified Decision Procedures: DPLL and Resolution} (with Berger, Nordval Forsberg and Seisenberger), LMCS accepted for publication \cite{AL14b}}
+\textbf{\ul{2. Extracting Verified Decision Procedures: DPLL and Resolution} (with Berger, Nordval Forsberg and Seisenberger), LMCS  \cite{AL14b}}
 This paper is an extension of \cite{AL12}. We extract a resolution solver based on the DPLL solver by showing that DPLL derivability implies derivability in the resolution proof calculus. The extracted program was translated into the function programming language Haskell and a comparison was performed with another verified SAT solver Versat and the industrial tool SCADE. The extracted solver was additionally applied to the verification of solid state interlocking programs following the methodology set out in \cite{AL14a}.
 
 
 
-\textbf{\ul{3. Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude} (extended abstract with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}} We present an approach to model ERTMS in such a way as to capture performance aspects of the system in an executable specification to which we can apply model checking to verify safety properties. Two examples are presented: the first consists of two trains that travel round a closed track in the shape of a pentagon, the second example takes the shape of the small junction from which trains can enter and leave. In the pentagon example we verify the safety property that the movement authorities of the two trains do not overlap which implies that they do not crash. In the second example we verify the safety property that the point does not move whilst it is in a movement authority i.e. the train does not derail.
+\textbf{\ul{3. Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude} (extended abstract with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}} We present an approach to model ERTMS in such a way as to capture performance aspects of the system in an executable specification to which we can apply model checking to verify safety properties. Two case studies are presented: the first consists of two trains that travel round a closed track in the shape of a pentagon, the second case study takes the shape of the small junction from which trains can enter and leave. In the pentagon case study we verify the safety property that the movement authorities of the two trains do not overlap which implies that they do not crash. In the second case study we verify the safety property that the point does not move whilst it is in a movement authority i.e. the train does not derail.
 
 \textbf{\ul{4. Modelling and Analysing the European Rail Traffic Management System in Real Time Maude} (extended abstract with Berger, James, Roggenbach, and Seisenberger), FTSCS 2014 \cite{AL14d}} An extended version of \cite{AL14c} has been submitted.
 
@@ -135,7 +135,12 @@ Hard disk: &  750GB 7200 RPM  SATA\\  \hline
 The Minlog implementations described in Chapters \ref{chapter:dpllminlog} and \ref{chapter:cdclproof} and Real Time Maude implementations described in \ref{chap:modelertms} and \ref{chap:verifyertms} are available at \url{http://cs.swan.ac.uk/~csal/phd/index.html}.
 
 \section{Acknowledgements}
-There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Dr Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career. In particular I would like to thank Simon Chadwick for organising the collaboration from the Siemens' end and for dealing with my queries and questions via email. My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house in the summer of 2014; this enabled me to spend even more of my time on the writing of this thesis.
+There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Dr Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. 
+
+Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career. In particular I would like to thank Simon Chadwick for organising the collaboration from the Siemens' end and for dealing with my queries and questions via email. 
+
+My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house in the summer of 2014; this enabled me to spend even more of my time on the writing of this thesis.
+
 Dr Fredrik Nordvall Forsberg has made several contributions to this thesis. Firstly, he wrote the automatic translation which enabled Minlog terms to be translated into Haskell during a stay at  LMU Munich with Prof. Helmut Schwichtenberg.  I would have been unable to perform such an in-depth analysis of the extracted program without it. He was also a co-author on a paper and acted with a large amount professionalism throughout the writing period. Dr Ulrich Berger has provide his expert guidance numerous times both as an co-author and as a second supervisor during Monika's maternity leave. Dr Markus Roggenbach also acted as a second supervisor. Amongst other things Markus introduced me to Hybrid Automata as well as provided valuable knowledge on the Railway Domain. Finally, I would like to thank Alison Jones for sharing her in-depth understanding of the English language and for proof reading my thesis.
 
 
