--- a/lit.bib
+++ b/lit.bib
@@ -301,8 +301,10 @@
   author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Seisenberger,
 	M.},
   title = {Extracting Verified Decision Procedures: {DPLL} and Resolution},
-  journal = {(To appear in) Logic Methods in Computer Science},
-  year = {2014},
+  journal = {Logical Methods in Computer Science},
+  year = {2015},
+  volume = {11},
+  number = {1},
   owner = {andylawrence},
   timestamp = {2014.08.04}
 }
