--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -95,7 +95,7 @@ Since this is a first attempt at modelling a complex system we make several assu
 %
 The assumption regarding the acceleration causes the speed to be a linear function of time and greatly simplifies the laws of motion needed to compute the braking curves.   We do not allow movement authorities to be revoked for two reasons; the first is that it makes the verification of safety properties far more difficult and the second is that the model we have is quite simple and the pentagon example does not contain any situations which would cause a movement authority to be revoked.
 %
-\section{Hybrid Automata} \label{sec:hybrid}
+\section{Modelling ERTMS Using Hybrid Automata} \label{sec:hybrid}
 One formalism which we can use to reason about systems such as ERTMS is hybrid automata \cite{TH96}. We shall give a theoretical overview of hybrid automata before formalising ERTMS as three hybrid automata composed in parallel. A hybrid automaton has discrete states called control modes and transitions between these modes called control switches. These control switches are triggered by either some condition on variables or by some event occurring. These events can either occur in some other automaton or they can be fired by an automaton due to some condition being met. The continuous transitions of the automaton are described by dotted variables\footnote{The dotted variables represent the rate of change of a given variable over time i.e. $\dot{y}$ denotes the derivative of $y$  $\dot{y} = \frac{dy}{dt}$. This notation was introduced by Newton \cite{CF28}.} and occur continually over time.
 \medskip
 \begin{mydef}[Hybrid Automaton: Syntax]\label{def:hybridautomatonsyntax}
@@ -305,7 +305,7 @@ We define a hybrid automaton $H_{IL}$ as follows:
 \begin{description}
 \item[Variables] The state of the interlocking automaton consists of five Boolean variables  $l_0, \ldots , l_4  \in \{Occupied, Free\}$ and a variable $ReqID \in \{0 , \ldots , 4 \}$ storing the last requested track segment.
 
-\item[Control Graph] The control graph of the interlocking automaton consists of two control modes $\{Response, Idle \}$ with five control switches connecting them: $Response \to Idle$, $Response \to Idle (2)$, $Idle \to Response$, $Response \to Response$, $Idle \to Idle$.
+\item[Control Graph] The control graph of the interlocking automaton consists of two control modes $\{Response, Idle \}$ with five control switches connecting them: $Response \to Idle$, $(Response \to Idle)_2$, $Idle \to Response$, $Response \to Response$, $Idle \to Idle$.
 
 \item[Initial conditions] \hspace*{0mm}
 	\begin{itemize}
@@ -322,7 +322,7 @@ We define a hybrid automaton $H_{IL}$ as follows:
 	\item $jump(Response \to Idle) :=  l_{ReqID} = Free $ 
     
 
-         \item $jump(Response \to Idle (2)) :=  \neg l_{ReqID} = Free$
+         \item $jump((Response \to Idle)_2)) :=  \neg l_{ReqID} = Free$
 
 
 	\item $jump(Idle \to Idle) :=  l_x' = Free, l_{x+1}' = Occupied$
@@ -336,7 +336,7 @@ We define a hybrid automaton $H_{IL}$ as follows:
 \begin{itemize}
 	\item $event(Idle \to Response) := Req.z$
 	\item $event(Response \to Idle) := Grant.z$
-	\item $event(Response \to Idle (2)) := Deny.z$
+	\item $event((Response \to Idle)_2)) := Deny.z$
 	\item $event(Idle \to Idle) := l_x.l_{x+1}$
 	\item $event(Response \to Response) := l_x.l_{x+1}$	
 \end{itemize}
